Refactor PWA meta tags and links in index.html
Updated PWA meta tags and links for better compatibility.

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,10 @@
   <meta name="theme-color" content="#EA580C" />
   <meta name="description" content="Application de gestion de recettes familiales avec import Instagram et TikTok" />
   
-  <!-- PWA -->
-  <link rel="manifest" href="/manifest.json" />
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="Recettes" />
+
+    <!-- PWA -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
   
   <!-- Icons -->
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
